--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Queen_Anita-V2",
+    "name": "༒MrHãçI{ërLørd༒",
     "description": "Simple WhatsApp Bot",
     "logo": "https://i.imghippo.com/files/OgnIC1722152981.jpg",
     "keywords": ["MrHackerLordz", "༒MrHãçI{ërLørd༒", "MrHackerLord"],
